--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -40,10 +40,10 @@
             </ul>
         </div>
         <div class="buttons">
-            <a href="about.html">Pokemon</a>
-            <a href="Product.html">Amazing Games</a>
-            <a href="Content.html">Game Trailer</a>
-            <a href="Content.html">Coming Soon</a>
+            <a href="../Extra Pages/pokemon.html">Pokemon</a>
+            <a href="../Extra Pages/games.html">Amazing Games</a>
+            <a href="../Extra Pages/The-Nintendo-Game.html">Game Trailer</a>
+            <a href="../Extra Pages/Comingsoon.html">Coming Soon</a>
         </div>
     </div>
 
