--- a/productPage/ProductPage.html
+++ b/productPage/ProductPage.html
@@ -19,6 +19,7 @@
   <!-- link the css style sheet to the main page -->
   <link rel="stylesheet" href="../mainCSS/productpage.css">
   <link rel="stylesheet" href="../mainCSS/header-footer.css">
+  <link rel="stylesheet" href="../mainCSS/normalize.css">
 
   <!-- link to the global header and footer -->
   <script src="../JS/header-footer.js" defer></script>
