--- a/extraPages/Comingsoon.html
+++ b/extraPages/Comingsoon.html
@@ -15,6 +15,7 @@
     
     <!-- link the css style sheet to the main page -->
     <link rel="stylesheet" href="../mainCSS/extraPagesCSS/comingsoon.css">
+    <link rel="stylesheet" href="../mainCSS/normalize.css">
 
 </head>
 <body>
