--- a/extraPages/The-Nintendo-Game.html
+++ b/extraPages/The-Nintendo-Game.html
@@ -15,6 +15,7 @@
 
     <!-- link the css style sheet to the main page -->
     <link rel="stylesheet" href="../mainCSS/extraPagesCSS/The-Nintendo-Game.css">
+    <link rel="stylesheet" href="../mainCSS/normalize.css">
 
 </head>
 <body>
