--- a/aboutPage/about.html
+++ b/aboutPage/about.html
@@ -16,6 +16,7 @@
     <!-- link the css style sheet to the main page -->
     <link rel="stylesheet" href="../mainCSS/about.css">
     <link rel="stylesheet" href="../mainCSS/header-footer.css">
+    <link rel="stylesheet" href="../mainCSS/normalize.css">
 
     <!-- link to the global header and footer -->
     <script src="../JS/header-footer.js" defer></script>
