--- a/homePage/index.html
+++ b/homePage/index.html
@@ -29,8 +29,8 @@
         <header id="main-header"></header> 
 
         <div class="content"> 
-            <h2>Welcome to the Nintendo Game Boy Website</h2>
-            <p>The Game Boy was a revolutionary handheld gaming console developed by Nintendo, released in Japan on April 21, 1989. It brought gaming on the go to the masses, with iconic titles like <strong>Tetris</strong> and <strong>Pokemon</strong>.</p>
+            <h2 class="topText">Welcome to the Nintendo Game Boy Website</h2>
+            <p class="topText">The Game Boy was a revolutionary handheld gaming console developed by Nintendo, released in Japan on April 21, 1989. It brought gaming on the go to the masses, with iconic titles like <strong>Tetris</strong> and <strong>Pokemon</strong>.</p>
             <img src="../Images/nintendogame.jpeg" alt="NintendoGameBoy" style="width:100%; max-width:600px; margin-top: 20px;">
             <div class="specialities">
                 <h3>Specialties of Nintendo Game Boy</h3>
