--- a/contactPage/contact.html
+++ b/contactPage/contact.html
@@ -14,7 +14,7 @@
         <title>Nintendo Contact Page</title>
 
         <!-- link the css style sheet to the main page -->
-        <link rel="stylesheet" href="../mainCss/contact.css">
+        <link rel="stylesheet" href="../mainCSS/contact.css">
         <link rel="stylesheet" href="../mainCSS/header-footer.css">
         <link rel="stylesheet" href="../mainCSS/normalize.css">
     
